@@ -1,8 +1,6 @@
-DIST gdisk-0.5.0.tgz 72092 RMD160 40fa5a7ce1102bbcf195b53ce4b43d1430802538 SHA1 c69a66b0be842a2f53cea035e4c66894b0c5abb8 SHA256 8a253c2360a84e9467867747c327247c29858c16614a5ce6d094cdf194e69a55
 DIST gdisk-0.6.10.tgz 133132 RMD160 42d0b35dd3f28dfcd43ead17eda95efe9541bc43 SHA1 336b4ce021ffdbd383988668ad5b472d43e1685a SHA256 1da75eb2c95191ca0dba1ae132e9cd5ff41fb47eedb2deaa262c60bcb53a588b
-DIST gdisk-0.6.8.tgz 129051 RMD160 9d4b3aec3b5d83b8410526e744f58c6511b51d74 SHA1 ad6cf6d17d9e5c7c72497de8b3803cb3ef8bb61d SHA256 f1672ca7b421fb847c0fdb0d97bef6dc8cdf7a2824b613ea7073db92a54e235f
-EBUILD gdisk-0.5.0.ebuild 425 RMD160 c45dc81864557f6090a4b4cea5f0668c0ad929ec SHA1 cfbc8e1f75d29b4e0c838f8301d3aee8e38b42ef SHA256 d3eab2a9cd938d6141e7af736c208800fc57459dcfd798836f53a4194aee7879
+DIST gdisk-0.6.13.tgz 135082 RMD160 48de01b5b1684cc7d75c1cbf8979695b358c4867 SHA1 f25cb88a6d9a7f964f5d274dbc074a94f823fae1 SHA256 47bb07d92ab13d652eacd6c8118fdf05d05168afae6691824099e4db8217f4a6
 EBUILD gdisk-0.6.10.ebuild 601 RMD160 cf1c19c0a80ba144c833b6db0d5b5e4df2ff7fc8 SHA1 c3380009d049adcf1fec5b7540f7b82b4442c4be SHA256 0c896c3e49b1e500e0fa29b37f0c8c602bf6aa002531f5d7bab643119468df1c
-EBUILD gdisk-0.6.8.ebuild 603 RMD160 f6023f6642b7f87ef59f718baec5870fa8ee611b SHA1 b83b8b606939fcab236c8e562773e2be67e98c0b SHA256 6c354d681c802dc3c35919312a1def85b11f8f25d145ec43c601350ef78f4e89
-MISC ChangeLog 527 RMD160 fc7b039ddf4c2674d209508017c1af4ed9a1b9b1 SHA1 befbbae27dbdb116af4adf5411359743e0463206 SHA256 cebd047ba3b43d0b77a0593c56644c8e2a169b15c6ce9a0c7d00159fabaaee26
+EBUILD gdisk-0.6.13.ebuild 601 RMD160 cf1c19c0a80ba144c833b6db0d5b5e4df2ff7fc8 SHA1 c3380009d049adcf1fec5b7540f7b82b4442c4be SHA256 0c896c3e49b1e500e0fa29b37f0c8c602bf6aa002531f5d7bab643119468df1c
+MISC ChangeLog 777 RMD160 4f77b85206e092ab266b96006e1d53cf820cea29 SHA1 083839bcd179b183a6a2e523df4d27377b22e88f SHA256 721d32b6977c95994b618156e574cbdd7abc9973a01e47c4f298e8355eb5c4a0
 MISC metadata.xml 466 RMD160 6ce383e4bb4872672643e3e93da52e2e165bbb5e SHA1 39701a9b9bcf24494343d26b1c641a219cff3173 SHA256 3130d49e487258ba6095d13b72bd8eae2f0e9598d19525cf0614fbbf69cb485b
