@@ -1,5 +1,12 @@
 # Copyright 2008-2009 Funtoo Technologies, LLC; Distributed under the GPL v2
 
+*gdisk-0.6.13 (20 Oct 2010)
+
+  20 Oct 2010; Daniel Robbins <drobbins@funtoo.org> +gdisk-0.6.13.ebuild:
+  Upstream bug fix release and some fixes relating to logical sector
+  sizes other than 512 bytes from 0.6.12 which may help some funtoo
+  users.
+
 *gdisk-0.6.10 (01 Sep 2010)
 
   01 Sep 2010; Daniel Robbins <drobbins@funtoo.org> +gdisk-0.6.10.ebuild:
